[package]
name = "test-runner-mcp"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "test-runner-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.6.1", features = [
    "server",
    "macros",
    "transport-sse-server",
    "schemars",
] }
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "process",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = "0.8"
schemars = "1.0"
tokio-util = { version = "0.7" }
clap = { version = "4.5", features = ["derive"] }
